fixed and updated multiple files

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -21,8 +21,8 @@
             <% } %>
                 <% searches.forEach(function(query, index) { %>
                     <div class="col-sm-6 panel">
-                        <a class="btn btn-block btn-default btn-lg" 
-                        href="/results?q=<%= query.term %></a>
+                        <a class="btn btn-block btn-default btn-lg"
+                        href="/results?q=<%= query.term %>"><%= query.term %></a>
     </div>
 <% }) %>
 
