--- a/public/views/partials/head.ejs
+++ b/public/views/partials/head.ejs
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <title>Twitter Analyst</title>
 
-<link type="css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/css/mdb.min.css" />
-<link type="css" rel="stylesheet" href="../assets/css/styles.css">
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/js/mdb.min.js"></script>
-<script type="text/javascript" src="../assets/app.js"></script>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+<link rel="stylesheet" href="../assets/css/style.css">
+
+<script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
+<script src="../assets/js/app.js"></script>
