Cleaned up top.ejs

--- a/public/views/top.ejs
+++ b/public/views/top.ejs
@@ -7,7 +7,6 @@
         <header>
             <% include ./partials/header %>
         </header>
-        <main>
         <div class="container">
 
         <div class="jumbotron text-center">
@@ -23,8 +22,7 @@
         <% }) %>
 
         </div>
-    </main>
-          <footer class="page-footer white center-on-small-only">
+        <footer>
             <% include ./partials/footer %>
         </footer>
 
