--- a/public/views/top.ejs
+++ b/public/views/top.ejs
@@ -7,6 +7,7 @@
         <header>
             <% include ./partials/header %>
         </header>
+        <main>
         <div class="container">
 
         <div class="jumbotron text-center">
@@ -14,7 +15,7 @@
         </div>
 
         <% terms.forEach(function(query, index){ %>
-            <div class="col-sm-6 panel">
+            <div class="col-sm-6 panel searchSpace">
                 <a class="btn btn-block btn-<%=query.style%> btn-lg" href="/results?q=<%=query.term %>">
                     <%= query.term %>
                 </a>
@@ -22,9 +23,9 @@
         <% }) %>
 
         </div>
-        <footer>
+        <footer class="page-footer white center-on-small-only">
             <% include ./partials/footer %>
         </footer>
-
+    </main>
     </body>
 </html>
