--- a/public/views/partials/header.ejs
+++ b/public/views/partials/header.ejs
@@ -17,7 +17,7 @@
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/top">Top</a>
+                    <a class="nav-link" href="/top">Top Results</a>
                 </li>
             </ul>
         </div>
